--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./main.css">
   <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
   <title>Lauren's Calculator</title>
 </head>
 <body>
